@@ -6,10 +6,10 @@ export(nse.geyer)
 export(nse.hiruk)
 export(nse.nw)
 export(nse.spec0)
+import(Rcpp)
 import(coda)
 import(mcmc)
 import(np)
+import(psd)
 import(sandwich)
 import(sapa)
-importFrom(Rcpp,evalCpp)
-useDynLib(nse)
